--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,7 +30,8 @@
 // COMPONENTS
 // Composants d'interface utilisateur spécifiques.
 // C’est là que la majorité de notre travail a lieu.
-
+@import "components/header-page";
+@import "components/hero";
 
 
 // UTILITIES
